--- a/src/components/HomePage/homepage.scss
+++ b/src/components/HomePage/homepage.scss
@@ -10,7 +10,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-top: 15%;
+  padding-top: 25%;
 }
 
 .img-logo {
